--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div id="header">
-            <h1>Today is Nick's birthday 🎉</h1>
+            <h1>Today is Nicole's birthday 🎉</h1>
             <img id="bff-img" src="images/nicole4BDproject.jpg">
             <h2 id="bday-age">41 years old</h2>
             <h4 id="bday-date">12.30.2022</h4>
